# cubix_data_engineer_capstone

./: .gitignore  .pre-commit-config.yaml  gitignore  pyproject.toml
.github/workflows/: deploy.yml
src/cubix_data_engineer_capstone/: test.py
src/cubix_data_engineer_capstone/etl/bronze/: extract_and_load_file.py
src/cubix_data_engineer_capstone/etl/gold/: daily_sales_metrics.py  wide_sales.py
src/cubix_data_engineer_capstone/etl/silver/: calendar.py  customers.py  product_category.py  product_subcategory.py  products.py  sales.py  scd.py
src/cubix_data_engineer_capstone/utils/: databricks.py
tests/: conftest.py
tests/etl/gold/: test_daily_sales_metrics.py  test_wide_sales.py
tests/etl/silver/: test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_products.py  test_sales.py
