[project]
name = "cubix-data-engineer-capstone"
version = "0.1.2"
description = ""
authors = [
    {name = "Mariano da Trani",email = "haengmeister@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=3.5.4)",
    "numpy (>=1,<2)"
]

[tool.poetry]
packages = [{include = "cubix_data_engineer_capstone", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==8.3.4)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
